--- a/react/components/Megamenu/styles.css
+++ b/react/components/Megamenu/styles.css
@@ -37,6 +37,7 @@
 
 /* SecondLevel */
 .megamenu .secondLevelList {}
+.megamenu .secondLevelListWrapper {}
 .megamenu .secondMenu {
   background-color: #ffffff;
 }
